--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/BR3NDAN-L8N/Puppeteer-Tooty#readme",
   "dependencies": {
+    "node-cron": "^3.0.0",
     "puppeteer": "^10.4.0"
   }
 }
